[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/SpawnProjectile.gd" type="Script" id=1]
[ext_resource path="res://triangles/even_triangle.png" type="Texture" id=2]
[ext_resource path="res://scripts/projectileDeathParticles.gd" type="Script" id=3]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 55.63
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
color = Color( 1, 0, 0, 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.254601 ), 0.0, 0.0, 0, 0, Vector2( 0.446319, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 85.14
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 60.82
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 0.48
scale = 0.09
scale_curve = SubResource( 4 )
color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "emit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EvenTriangle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.140022, 0.0504487 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "emit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -200 ), Vector2( 0, -180 ), Vector2( 0, -160 ), Vector2( 0, -140 ), Vector2( 0, -120 ), Vector2( 0, -100 ), Vector2( 0, -80 ), Vector2( 0, -60 ), Vector2( 0, -40 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EvenTriangle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.294395, 0.0796753 ), Vector2( 0.264957, 0.0717088 ), Vector2( 0.235518, 0.0637422 ), Vector2( 0.20608, 0.0557757 ), Vector2( 0.176641, 0.0478092 ), Vector2( 0.147203, 0.0398426 ), Vector2( 0.117764, 0.0318761 ), Vector2( 0.0883256, 0.0239096 ), Vector2( 0.058887, 0.0159431 ), Vector2( 0.0294485, 0.00797653 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CircleShape2D" id=1]

[node name="SpawnProjectile" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="EvenTriangle" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0.454902 )
position = Vector2( 0.493992, 1.63999 )
scale = Vector2( 0.140022, 0.0504487 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -100 )
amount = 4
lifetime = 0.8
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="death_particles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.46
process_material = SubResource( 5 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="death_particles"]
anims/RESET = SubResource( 9 )
anims/emit = SubResource( 8 )

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/emit = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 1 )

[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
